[package]
name = "tbd-cfg"
version = "0.1.0"
edition = "2021"
authors = ["Stephen Morgan <steve@rebelops.io>"]
description = "Configuration management tool for TBD Tools"

[dependencies]
tbd-iac = { git = "https://github.com/tbdtools/tbd-iac.git" }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
assert_fs = "1.0"
predicates = "3.0"
